tools/tests/errors/surf_type_08.experr
index must be Integer, not 'String'
